packages/theme-default/src/components/calendar/header/calendar-header.scss
.sx__calendar-header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  padding: var(--sx-spacing-padding4);
  gap: var(--sx-spacing-padding4);

  .sx__date-input {
    padding: var(--sx-spacing-padding3) var(--sx-spacing-padding4);
    font-size: var(--sx-calendar-header-input-font-size);
  }

  .sx__date-picker-popup {
    z-index: var(--sx-calendar-header-popup-z-index);
  }
}

.sx__calendar-header-content {
  display: flex;
  align-items: center;
  gap: var(--sx-spacing-padding4);
}

.sx__forward-backward-navigation {
  height: 45px;

  .sx__is-calendar-small &,
  .is-list-view & {
    display: none;
  }
}

.sx__calendar-header__week-number {
  border-radius: 4px;
  background-color: #eceef1;
  color: var(--sx-color-on-surface);
  padding: var(--sx-spacing-padding1) var(--sx-spacing-padding2);
  font-size: 0.75rem;
  font-weight: 500;

  .is-dark & {
    background-color: #4a4458;
  }
}

